--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,12 @@
 *.pyc
 __pycache__/
 local_settings.py
-../ecomm_origi/db.sqlite3
+
 db.sqlite3-journal
-db.sqlite3
+
+.idea
+.gitignore
+./media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -44,7 +47,7 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a templates
+#  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
@@ -134,6 +137,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.idea
 env/
 venv/
 ENV/
@@ -165,10 +169,11 @@ dmypy.json
 cython_debug/
 
 # PyCharm
-#  JetBrains specific templates is maintained in a separate JetBrains.gitignore that can
+#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
+media/users_avatar/2c699dff98ff95a510e27297da2c59ea.jpg
